feat: routine commit

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <h1>NOVO LOGIN</h1>
                     <br>
                     <br>
-                    <button>
-                        <h2>Criar conta</h2>
+                    <button class="createAcountButton">
+                        <h2 class="createAcountText">Criar conta</h2>
                     </button>
                     <div class="mediasContainer">
                         <div class="mediaLogin">
