lots of changes, forgot to commit

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             <div class="circle-4"></div>
         </div>
         <main class="floatingWelcome">
-            
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/023/654/565/small/grunge-dots-and-points-texture-background-abstract-grainy-overlay-graphic-illustration-with-transparent-background-png.png"
+                alt="granuladoTexture" class="granuladoTexture">
             <section class="newLogin">
-                <h1>Bem vindo</h1>
+                <h1 class="welcomeTitle">Bem vindo</h1>
                 <div class="createAcount">
-                    <h1>NOVO LOGIN</h1>
+                    <h1 class="createAccountTitle"><u>NOV</u>O LOGIN</h1>
                     <br>
                     <br>
                     <button class="createAcountButton">
@@ -43,18 +44,34 @@
                 </div>
             </section>
             <section class="loginContainer">
-                <button><h2>Logar</h2></button>
-                <h1>FAÇA LOGIN</h1>
-                <div class="user&emailContainer"> 
-                    <input type="text" name="email" id="email">
-                    <input type="password" name="password" id="password">
-                </div>
-                <button><h2>Entrar</h2></button>
-                <div class="otherMedias">
-                    <img src="" alt="Facebook" class="media-unity">
-                    <img src="" alt="TikTok" class="media-unity">
-                    <img src="" alt="Instagram" class="media-unity">
-                    <img src="" alt="X" class="media-unity">
+                <button class="logarButton">
+                    <h2>Logar</h2>
+                </button>
+                <div class="loginContainer">
+                    <h1>FAÇA LOGIN</h1>
+                    <div class="useremailContainer">
+                        <div class="userEmail">
+                            <img src="img/user icon.png" alt="userIcon" class="userIcon">
+                            <div class="verticalLine"></div>
+                            <input type="text" name="email" id="email" class="input-1">
+                        </div>
+                        <div class="userEmail">
+                            <img src="img/cadeado.png" alt="userIcon" class="userIcon">
+                            <div class="verticalLine"></div>
+                            <input type="password" name="password" id="password" class="input-2">
+                            <img src="img/invisibility.png" alt="userIcon" class="invisibilityIcon">
+                        </div>
+                    </div>
+                    <button>
+                        <h2>Entrar</h2>
+                    </button>
+
+                    <div class="otherMedias">
+                        <img src="" alt="Facebook" class="media-unity">
+                        <img src="" alt="TikTok" class="media-unity">
+                        <img src="" alt="Instagram" class="media-unity">
+                        <img src="" alt="X" class="media-unity">
+                    </div>
                 </div>
             </section>
         </main>
