feat: add media images

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             <div class="circle-4"></div>
         </div>
         <main class="floatingWelcome">
+            <div class="circleWithArrowsContainer">
+                <img src="img/arrow.png" alt="" class="arrow1">
+                <img src="img/arrow.png" alt="" class="arrow2">
+            </div>
 
             <section class="newLogin">
                 <h1 class="welcomeTitle">Bem vindo</h1>
-                <div class="createAcount">
+                <div class="createAccount">
                     <h1 class="createAccountTitle"><u>NOV</u>O LOGIN</h1>
                     <br>
                     <br>
@@ -31,13 +35,13 @@
                     </button>
                     <div class="mediasContainer">
                         <div class="mediaLogin">
-                            <img src="" alt="gmail" class="media">
+                            <img src="img/social_medias/gmail.png" alt="gmail" class="contactMedia">
                         </div>
                         <div class="mediaLogin">
-                            <img src="" alt="whatsapp">
+                            <img src="img/social_medias/zapzap.png" alt="whatsapp" class="contactMedia">
                         </div>
                         <div class="mediaLogin">
-                            <img src="" alt="messenger">
+                            <img src="img/social_medias/telegram.png" alt="messenger" class="contactMedia">
                         </div>
                     </div>
                 </div>
@@ -47,7 +51,7 @@
                     <h2>Logar</h2>
                 </button>
                 <div class="loginContainer">
-                    <h1>FAÇA LOGIN</h1>
+                    <h1 class="loginTitle">FAÇA O LOGIN</h1>
                     <div class="useremailContainer">
                         <div class="userEmail">
                             <img src="img/user icon.png" alt="userIcon" class="userIcon">
@@ -61,20 +65,32 @@
                             <img src="img/invisibility.png" alt="userIcon" class="invisibilityIcon">
                         </div>
                     </div>
-                    <button>
-                        <h2>Entrar</h2>
+                    <div class="rememberMeContainer">
+                        <input type="checkbox" id="RememberMe" name="Lembrar de mim" value="RememberMe"
+                            class="rememberMe">
+                        <h4>Lembrar de mim</h4>
+                    </div>
+                    <button class="entrarButton">
+                        <h2 class="entrarButtonH2">Entrar</h2>
                     </button>
-
-                    <div class="otherMedias">
-                        <img src="" alt="Facebook" class="media-unity">
-                        <img src="" alt="TikTok" class="media-unity">
-                        <img src="" alt="Instagram" class="media-unity">
-                        <img src="" alt="X" class="media-unity">
+                    <div class="otherMediasContainer">
+                        <div class="otherMedias">
+                            <img src="img/social_medias/face.png" alt="Facebook" class="media-unity">
+                        </div>
+                        <div class="otherMedias">
+                            <img src="img/social_medias/insta.png" alt="TikTok" class="media-unity">
+                        </div>
+                        <div class="otherMedias">
+                            <img src="img/social_medias/tiktok.png" alt="Instagram" class="media-unity">
+                        </div>
+                        <div class="otherMedias">
+                            <img src="img/social_medias/twitter.png" alt="X" class="media-unity">
+                        </div>
                     </div>
                 </div>
             </section>
             <img src="https://static.vecteezy.com/system/resources/thumbnails/023/654/565/small/grunge-dots-and-points-texture-background-abstract-grainy-overlay-graphic-illustration-with-transparent-background-png.png"
-                        alt="granuladoTexture" class="granuladoTexture">
+                alt="granuladoTexture" class="granuladoTexture">
         </main>
     </div>
 </body>
