chore: turn granulated texture into a file

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                     </div>
                 </div>
             </section>
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/023/654/565/small/grunge-dots-and-points-texture-background-abstract-grainy-overlay-graphic-illustration-with-transparent-background-png.png"
-                alt="granuladoTexture" class="granuladoTexture">
+            <img src="img/granulado.png" alt="granuladoTexture" class="granuladoTexture">
         </main>
     </div>
 </body>
